# void_terminal_server

./: README.md
trunk/void_rev/src/: EdgeLoadThread.cxx  EdgeLoadThread.h  Event.cxx  Makefile  Makefile.am  Makefile.in  Message.h  Resource.cxx  ResourceMaster.cxx  ResourceMaster.h  VoidServerThread.cxx  VoidServerThread.h  VoidServerThread_orig.cxx  VoidThreadSpawner.cxx  VoidThreadSpawner.h  control  control.cxx  server.cxx  void_util.cxx  void_util.h
trunk/void_rev/src/.deps/: EdgeLoadThread.Po  Field.Po  PrimaryKey.Po  ResourceMaster.Po  Universe.Po  VoidServerThread.Po  VoidThreadSpawner.Po  tcpserver.Po  void_util.Po
trunk/void_rev/src/commands/: EscapePodBehavior.cxx  Makefile  Makefile.am  Makefile.in  SectorCommBehavior.h  VoidCommand.cxx  VoidCommand.h  VoidCommandAttack.cxx  VoidCommandAttack.h  VoidCommandBeam.cxx  VoidCommandBeam.h  VoidCommandCheckMail.cxx  VoidCommandCheckMail.h  VoidCommandComputer.cxx  VoidCommandComputer.h  VoidCommandDeploy.cxx  VoidCommandDisplay.cxx  VoidCommandDockShipYard.cxx  VoidCommandDockShipYardHolds.h  VoidCommandDockShipYardList.h  VoidCommandDockShipYardSpec.h  VoidCommandHail.cxx  VoidCommandHail.h  VoidCommandMove.cxx  VoidCommandPort.cxx  VoidCommandPort.h  VoidCommandPurchaseShipItem.cxx  VoidCommandReclaim.cxx  VoidCommandSHipYardBuy.cxx  VoidCommandScan.cxx  VoidCommandScan.h  VoidCommandStatus.cxx  VoidCommandStatus.h  VoidCommandTow.cxx  VoidCommandTow.h  VoidCommandTransmit.cxx  VoidCommandTransmit.h  VoidCommandWho.cxx  test  test.cxx
trunk/void_rev/src/handles/: LoginHandle.cxx  Makefile  Makefile.am  Makefile.in  OutpostHandle.cxx  OutpostHandle.h  SerialObject.cxx  SerialObject.h  ShipHandle.cxx  ShipHandle.h  ShipTypeHandle.cxx.bk2  ShipTypeHandle.h
trunk/void_rev/src/socket/: Makefile  Makefile.am  Makefile.in  Socket.cxx  Socket.h  SocketException.h
trunk/void_rev/src/thread/: Condition.cxx  Makefile  Makefile.am  Makefile.in  Mutex.cxx  Semaphore.cxx  Semaphore.h  Thread.cxx  thread.h
trunk/void_rev/src/tools/: CombatTools.cxx  CombatTools.h  CommTools.cxx  CommTools.h  Makefile.am  SentinelTools.cxx  SentinelTools.h  ShipTools.cxx  ToolSet.cxx
void_rev/: AUTHORS  BATTLE_TODO  CMakeLists.txt  CREATE_TODO  DB_CREATION_STEPS  LICENSE  Makefile  Makefile.am  Makefile.in  NOTES  README  TODO  bootstrap.sh  config.status  configure  configure.ac  control  control.py  delete_login.pl  void_nov10_04.tar.bz2
void_rev/autom4te.cache/: output.0  output.1  requests  traces.1
void_rev/create/: create.pl  create.py  create_database.sql  create_default_data.sql  generate_map.py  quadtree.py  random_tests.py
void_rev/data_backups/: create_fresh.sql  fresh_universe_2017.sql
void_rev/scripts/: mark_territory.py
void_rev/sql/: create_alliance.sql  create_config.sql  create_log.sql  create_login.sql  create_mail.sql  create_mob.sql  create_news.sql  create_outpost.sql  create_planets.sql  create_player.sql  create_sector_flags.sql  create_ship.sql  create_shiptype.sql  create_stardock.sql  migrate_prices.sql  queries.sql  space_graph_queries.sql  standard_config.sql  temp.sql
void_rev/src/: EdgeLoadThread.cxx  EdgeLoadThread.h  Event.cxx  Event.h  Field.cxx  Field.h  Makefile  Makefile.am  Makefile.in  Message.cxx  Message.h  PlanetUpdateThread.cxx  PlanetUpdateThread.h  PrimaryKey.cxx  PrimaryKey.h  Resource.cxx  Resource.h  ResourceMaster.cxx  ResourceMaster.h  Universe.cxx  Universe.h  VoidServerThread.cxx  VoidServerThread.h  VoidServerThread_orig.h  VoidThreadSpawner.cxx  VoidThreadSpawner.h  control  server.cxx  server_fifo.cxx  void_util.cxx  void_util.h
void_rev/src/.deps/: Message.Po  Resource.Po  control.Po  server.Po
void_rev/src/commands/: Makefile  Makefile.am  Makefile.in  ShipYard  VoidCommand.cxx  VoidCommand.h  VoidCommandAttack.cxx  VoidCommandAttack.h  VoidCommandBeam.cxx  VoidCommandBeam.h  VoidCommandCheckMail.cxx  VoidCommandClaim.cxx  VoidCommandClaim.h  VoidCommandComputer.cxx  VoidCommandComputer.h  VoidCommandDeploy.cxx  VoidCommandDeploy.h  VoidCommandDisplay.cxx  VoidCommandDisplay.h  VoidCommandDock.cxx  VoidCommandDock.h  VoidCommandDockArmory.h  VoidCommandDockShipYardBuy.h  VoidCommandDockShipyard.h  VoidCommandHail.cxx  VoidCommandLand.cxx  VoidCommandLand.h  VoidCommandMail.cxx  VoidCommandMail.h  VoidCommandMove.cxx  VoidCommandMove.h  VoidCommandPort.cxx  VoidCommandPurchaseShipItem.cxx  VoidCommandPurchaseShipItem.h  VoidCommandReclaim.cxx  VoidCommandReclaim.h  VoidCommandScan.cxx  VoidCommandScan.h  VoidCommandStatus.cxx  VoidCommandStatus.h  (+8 more)
void_rev/src/commands/.deps/: VoidCommandDisplay.Po  VoidCommandDock.Po  VoidCommandDockArmory.Po  VoidCommandPurchaseShipItem.Po  VoidCommandTransmit.Po
void_rev/src/commands/behaviors/: DeleteShipBehavior.h  EvaluateShipBehavior.cxx  EvaluateShipBehavior.h  Makefile.am  Makefile.in  ShipListBehavior.cxx  ShipListBehavior.h
void_rev/src/commands/computer/: Makefile.in  VoidCommandComputerCloak.cxx  VoidCommandComputerCloak.h  VoidCommandComputerDockList.cxx  VoidCommandComputerDockList.h  VoidCommandComputerPlayers.cxx  VoidCommandComputerShipList.cxx  VoidCommandComputerShipList.h
void_rev/src/commands/dock/: Makefile.am  Makefile.in  VoidCommandDockArmory.cxx  (+14 more)
void_rev/src/handles/: LoginHandle.cxx  LoginHandle.h  Makefile  Makefile.am  Makefile.in  OutpostHandle.cxx  OutpostHandle.cxx.bk2  OutpostHandle.h  PlanetClassHandle.cxx  PlanetClassHandle.h  PlanetHandle.cxx  PlanetHandle.h  PlayerHandle.cxx  PlayerHandle.cxx.bk2  PlayerHandle.h  SerialObject.cxx  SerialObject.h  ShipHandle.cxx  ShipHandle.h  ShipTypeHandle.cxx  ShipTypeHandle.h
void_rev/src/socket/: Makefile  Makefile.in  Socket.cxx  Socket.h  SocketException.h
void_rev/src/thread/: Condition.cxx  Condition.h  Makefile  Makefile.am  Makefile.in  Mutex.cxx  Mutex.h  PThreadException.h  Thread.cxx  thread.h
void_rev/src/tools/: CombatTools.cxx  CombatTools.h  CommTools.cxx  CommTools.h  Makefile.am  Makefile.in  OutpostTools.cxx  OutpostTools.h  PlanetTools.h  SentinelTools.cxx  SentinelTools.h  ShipTools.cxx  ShipTools.h  ToolSet.cxx  ToolSet.h
(+92 files in other folders)
