noinst_LIBRARIES = libcommand.a

libcommand_a_SOURCES =  VoidCommand.cxx \
			VoidCommandDisplay.cxx \
			VoidCommandHail.cxx \
			VoidCommandMove.cxx \
			VoidCommandPort.cxx \
			VoidCommandStatus.cxx \
			VoidCommandTransmit.cxx \
			VoidCommandWho.cxx \
			VoidCommandSubCommands.cxx \
			VoidCommandDock.cxx \
			VoidCommandDockShipYard.cxx \
			VoidCommandDockShipYardList.cxx \
			VoidCommandDockShipYardBuy.cxx \
			VoidCommandDockShipYardSpec.cxx	 \
			VoidCommandBeam.cxx \
			VoidCommandDockArmory.cxx \
			VoidCommandDockArmoryMissiles.cxx \
			VoidCommandPurchaseShipItem.cxx \
			VoidCommandDockShipYardHolds.cxx \
			VoidCommandTow.cxx


INCLUDES = 	-I@top_srcdir@/src \
		-I@top_srcdir@/src/handles/ \
		-I@top_srcdir@/src/socket/ \
		-I@top_srcdir@/src/thread/ 
