noinst_LIBRARIES = libhandles.a

libhandles_a_SOURCES =  SerialObject.cxx \
			LoginHandle.cxx \
			OutpostHandle.cxx \
			PlayerHandle.cxx \
			ShipHandle.cxx \
			ShipTypeHandle.cxx

INCLUDES = -I@top_srcdir@/src/ \
		-I@top_srcdir@/src/handles/ \
		-I@top_srcdir@/src/commands/ \
		-I@top_srcdir@/src/thread/ \
		-I@top_srcdir@/src/socket/
