noinst_LTLIBRARIES = libhandles.la

libhandles_la_SOURCES =  SerialObject.cxx \
			LoginHandle.cxx \
			OutpostHandle.cxx \
			PlayerHandle.cxx \
			ShipHandle.cxx \
			ShipTypeHandle.cxx \
			LoginHandle.h \
		        PlayerHandle.h \
			ShipHandle.h \
			OutpostHandle.h \
			SerialObject.h \
			ShipTypeHandle.h


INCLUDES = -I@top_srcdir@/src/ \
		-I@top_srcdir@/src/handles/ \
		-I@top_srcdir@/src/commands/ \
		-I@top_srcdir@/src/commands/dock/ \
		-I@top_srcdir@/src/commands/behaviors/ \
		-I@top_srcdir@/src/thread/ \
		-I@top_srcdir@/src/socket/
