noinst_LTLIBRARIES = libthread.la

libthread_la_SOURCES =  Thread.cxx \
			Mutex.cxx \
			Semaphore.cxx \
			Condition.cxx \
			Condition.h \
			Semaphore.h \
			Mutex.h \
			PThreadException.h \
			thread.h

INCLUDES = -I@top_srcdir@/src/ \
		-I@top_srcdir@/src/handles/ \
		-I@top_srcdir@/src/commands/ \
		-I@top_srcdir@/src/thread/ 
