noinst_LTLIBRARIES = libtools.la

libtools_la_SOURCES =  CombatTools.h \
			CombatTools.cxx \
			ToolSet.h \
			ToolSet.cxx \
			ShipTools.h \
			ShipTools.cxx \
			CommTools.h \
			CommTools.cxx \
			SentinelTools.cxx \
			SentinelTools.h


INCLUDES = -I@top_srcdir@/src/ \
		-I@top_srcdir@/src/handles/ \
		-I@top_srcdir@/src/commands/ \
		-I@top_srcdir@/src/commands/dock/ \
		-I@top_srcdir@/src/commands/behaviors/ \
		-I@top_srcdir@/src/thread/ \
		-I@top_srcdir@/src/socket/
