noinst_LTLIBRARIES = libcommandbehaviors.la

libcommandbehaviors_la_SOURCES =  EvaluateShipBehavior.cxx \
			ShipListBehavior.cxx \
			EvaluateShipBehavior.h \
			ShipListBehavior.h 

INCLUDES = 	-I@top_srcdir@/src \
		-I@top_srcdir@/src/handles/ \
		-I@top_srcdir@/src/socket/ \
		-I@top_srcdir@/src/thread/ \
		-I@top_srcdir@/src/commands/dock \
		-I@top_srcdir@/src/commands/computer/ \
		-I@top_srcdir@/src/commands/
