noinst_LTLIBRARIES = libcommandcomputer.la

libcommandcomputer_la_SOURCES = VoidCommandComputerShipList.h \
				VoidCommandComputerShipList.cxx \
				VoidCommandComputerPlayers.h \
				VoidCommandComputerPlayers.cxx \
				VoidCommandComputerCloak.h \
				VoidCommandComputerCloak.cxx





INCLUDES = 	-I@top_srcdir@/src \
		-I@top_srcdir@/src/handles/ \
		-I@top_srcdir@/src/socket/ \
		-I@top_srcdir@/src/thread/ \
		-I@top_srcdir@/src/commands/ \
		-I@top_srcdir@/src/commands/computer/ \
		-I@top_srcdir@/src/commands/behaviors/ 
