noinst_LTLIBRARIES = libcommanddock.la

libcommanddock_la_SOURCES = 	VoidCommandDockShipYard.cxx \
			VoidCommandDockShipYardList.cxx \
			VoidCommandDockShipYardBuy.cxx \
			VoidCommandDockShipYardSpec.cxx	 \
			VoidCommandDockArmory.cxx \
			VoidCommandDockArmoryMissiles.cxx \
			VoidCommandDockShipYardHolds.cxx \
			VoidCommandDockArmory.h \
		        VoidCommandDockShipYardHolds.h \
			VoidCommandDockArmoryMissiles.h \
			VoidCommandDockShipYardList.h \
			VoidCommandDockShipYardBuy.h  \
			VoidCommandDockShipYardSpec.h \
			VoidCommandDockShipYard.h \
			VoidCommandDockShipYardSell.h \
			VoidCommandDockShipYardSell.cxx \
			VoidCommandDockArmorySentinels.cxx \
			VoidCommandDockArmorySentinels.h \
			VoidCommandDockArmoryShields.cxx \
			VoidCommandDockArmoryShields.h



INCLUDES = 	-I@top_srcdir@/src \
		-I@top_srcdir@/src/handles/ \
		-I@top_srcdir@/src/socket/ \
		-I@top_srcdir@/src/tools/ \
		-I@top_srcdir@/src/thread/ \
		-I@top_srcdir@/src/commands/ \
		-I@top_srcdir@/src/commands/dock/ \
		-I@top_srcdir@/src/commands/behaviors/ 
